@@ -14,7 +14,7 @@ char *hpd_up =
         "\n"
         "Main options:\n"
         "\n Output:\n"
-        "  -d, [--raw] [--batch] [--export|-E] [-print] [ --r[u]sleep]\n"
+        "  -d, [--raw] [--batch] [--export|-E] [-print] [ --r[u]sleep] [--stats] ..\n"
         "                        Read directory log and print to stdout (text/binary)\n"
         "                          (-vv prints dir nuke status from nukelog)\n"
         "                         --batch         Prints with simple formatting\n"
@@ -42,8 +42,10 @@ char *hpd_up =
         "                          --fd - apply filters before recursor descends into subdirectory\n"
         "                          --recursive (-R) - traverse the whole <root dir> directory tree\n"
         "                          --xretry - re-start the operation when no results\n"
-        "  -print <fmt string>   Format output using {var} directives (see DATA_STRUCTURES for a field list)\n"
-        "  -printf <fmt string>  Same as -printf, only does not print a new line character at the end\n"
+        "  -print  <format string>\n"
+        "                        Format output using {var} directives (see DATA_STRUCTURES for a field list)\n"
+        "  -printf <format string>\n"
+        "                        Same as -printf, only does not print a new line character at the end\n"
         "  --stdin               Read data from stdin\n"
         "\n Input:\n"
         "  -e <dirlog|nukelog|dupefile|lastonlog|imdb|game|tvrage|ge1>\n"
@@ -90,11 +92,12 @@ char *hpd_up =
         "                          It's generally much faster compared to --exec, since it doesn't fork /bin/sh\n"
         "                          for each individual processed record\n"
         "                        --esredir redirects stdout from executed command to <file>\n"
-        "  --preexec <command [{field}..{field}..]>\n"
+        "  --preexec  <command [{field}..{field}..]>\n"
         "                        Execute shell <command> before starting main procedure\n"
         "  --postexec <command [{field}..{field}..]>\n"
         "                        Execute shell <command> after main procedure finishes\n"
         "  --loopexec <command [{field}..{field}..]>\n"
+        "                        Execute command each loop (see --loop)\n"
         "\n Matching:\n"
         "  --regex [<field>,]<match>\n"
         "                        Regex filter string, used during various operations\n"
@@ -141,6 +144,8 @@ char *hpd_up =
         "Options:\n"
         "  -f                    Force operation where it applies (use -ff for greater effect)\n"
         "  -v                    Increase verbosity level (use -vv or more for greater effect)\n"
+        "  --stats               Output statistics after operation finishes (applies to dump ops)\n"
+        "  --nostats             Disable operation statistics output\n"
         "  --nowrite             Perform a dry run, executing normally except no writing is done\n"
         "  --nobuffer            Disable data file memory buffering\n"
         "  -y, --followlinks     Follow symbolic links (default is skip)\n"
@@ -148,14 +153,14 @@ char *hpd_up =
         "  --memlimit=<bytes>    Maximum file size that can be pre-buffered into memory\n"
         "  --memlimita=<bytes>   Maximum ASCII input data file size (ignored)\n"
         "  --shmem [--shmdestroy] [--shmdestonexit] [--shmreload]\n"
-        "                        Instead of internal memory, use the shared memory segment to buffer log data\n"
+        "                        Instead of process memory pages, use the shared memory to buffer log data\n"
         "                           This is usefull as an inter-process caching mechanism, allowing other glutil\n"
         "                            instances (or other processes) rapid access to the log data, without having to\n"
         "                            allocate pages and load from filesystem each time\n"
         "                           If log file is present and it's size doesn't match segment size, glutil\n"
         "                            destroys the segment and re-creates it with new size\n"
         "                           Although this applies globally, it should only be used with dump operations (-d,-n,-i,..)\n"
-        "                           DO NOT use, unless you know exactly what you're doing\n"
+        "                           DO NOT use, unless you know exactly what you are doing\n"
         "                        --shmdestroy forces the old segment (if any) be destroyed and re-loaded\n"
         "                        --shmdestonexit destroys used segments before exiting process\n"
         "                        --shmreload forces existing records (if any) be reloaded, but segment is not destroyed\n"
@@ -173,13 +178,12 @@ char *hpd_up =
         "                           Applies to -r, -t, -g, -x (can apply to other modes)\n"
         "  --xblk                Ignores files/dirs on non-block devices\n"
         "                           Applies to -r, -t, -g, -x (can apply to other modes)\n"
-        "  --rev                 Reverses the order in which records are processed\n"
+        "  --rev                 Reverses the order in which records are enumerated\n"
         "  --ipc <key>           Override gl's shared memory segment key setting\n"
         "  --daemon              Fork process into background\n"
-        "  --loop <interval>\n   Loops the given operation\n"
+        "  --loop <interval>     Loops the given operation\n"
         "                           Use caution, some operations might fail when looped\n"
         "                           This is usefull when running yourown scripts (--exec)\n"
-        "                         Execute command each loop\n"
         "  --rsleep              Timeout in seconds (log parsing/filesystem walking)\n"
         "  --rusleep             Timeout in nanoseconds (log parsing/filesystem walking)\n"
         "  --loglevel <0-6>      Log verbosity level (1: exception only..6: everything)\n"
