@@ -34,6 +34,8 @@
  *   - + Add 'st_mode' (2.3.13)
  *   - + --r[u]sleep log parsing/filesystem walking timeout (2.3.13)
  *   - ~ --raw dump was displaying stats info (2.3.14)
+ *   - + --stats and --nostats (read --help) (2.3.15)
+ *   - ~ Disabled statistics after dump by default (2.3.15)
  *
  * v2.2:
  *
